<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown">


    <ImageView
        android:id="@+id/imageViewLogoCafe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_weight="1"/>


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/white"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBrown"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:textSize="24sp"
        android:onClick="onClickCreateOrder"
        android:text="@string/button_create_order" />
</LinearLayout>